objects/cterminal__Terminal_Business__c.object
<CustomObject>
    <description>Details about a specific Chargent Terminal Business</description>
    <fields>
        <fullName>cterminal__Acquirer__c</fullName>
        <label>Acquirer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__Business_Id__c</fullName>
        <externalId>true</externalId>
        <label>Business Id</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>cterminal__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>cterminal__DBA__c</fullName>
        <label>DBA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__Default_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sets this business as the business to use when no user assignment to a store or business exists</description>
        <label>Default Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cterminal__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cterminal__Industry_Type__c</fullName>
        <label>Industry Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__Legal_Name__c</fullName>
        <label>Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__MCC__c</fullName>
        <label>MCC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__Processor__c</fullName>
        <label>Processor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__SIC__c</fullName>
        <label>SIC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__State__c</fullName>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Terminal Business</label>
    <nameField>
        <label>Terminal Business Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Terminal Businesses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>